<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_state_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/empty_state_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/empty_state_text_header"
        style="@android:style/TextAppearance.Material.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/empty_state_text_subheader"
        style="@android:style/TextAppearance.Material.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/empty_state_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp" />
</LinearLayout>