<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit_profile"
        android:title="@string/edit_profile" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out" />
</menu>