<resources>
    <string name="app_name">Artie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="search_empty_state_subheader">Tap the search bar above to find events and artists.</string>
    <string name="search_what_query_hint">What are you looking for?</string>
    <string name="search_where_query_hint">Where are you looking for it?</string>
    <string name="search_error">Oh no! Something went wrong.\nPlease try your search again or change your search criteria.</string>
    <string name="event_detail_toolbar">Event Details</string>
    <string name="user_detail_toolbar"> %s\'s Profile</string>
    <string name="event_item_citystate">In %s</string>
    <string name="event_item_hosted_by">Hosted by %s</string>
    <string name="search_activity_no_results_header">No results found. </string>
    <string name="search_activity_no_results_subheader">Try another search!</string>
    <string name="email_user">Email %s\!</string>
    <string name="add_user_to_contacts">Save %s to your contacts!</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="search_empty_state_header">Get To The Gig!</string>
    <string name="error_header">Oh no! Something went wrong</string>
    <string name="search_error_subheader">We\'re looking into it!</string>
    <string name="preference_file_key">com.bookyrself.bookyrself.PREFERENCE_FILE_KEY</string>
    <string name="has_seen_onboarding_key">HAS_SEEN_ONBOARDING_KEY</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_activity_event_creation">EventCreationActivity</string>
    <string name="auth_val_prop_header">Who are you?</string>
    <string name="auth_val_prop_subheader">Sign in now and join the community!</string>
    <string name="view_your_contacts">View Your Contacts!</string>
    <string name="contacts_toolbar">Your Contacts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_empty_state_no_content_header">You have no contacts!</string>
    <string name="contacts_empty_state_no_content_subheader">Add contacts by clicking \"Add Contact\" on User profiles</string>
    <string name="search_event_creation_query_hint">Who are you looking for?</string>
    <string name="event_creation_artists_hint">Choose artists from your contacts</string>
    <string name="event_creation_title">Event Creation</string>
    <string name="event_creation_event_name">Name your event</string>
    <string name="event_creation_city_state">City and State of event</string>
    <string name="event_creation_tags">Tag your event</string>
    <string name="event_creation_select_date">Select Date</string>
    <string name="search_fragment_search">SEARCH</string>
    <string name="search_fragment_search_button_text">SEARCH</string>
    <string name="search_fragment_edit_search_btn_text">EDIT SEARCH</string>
    <string name="event_creation_contacts_required">Please select contacts to invite!</string>
    <string name="profile_creation_title">Edit Your Profile</string>
    <string name="title_event_invites">Invites</string>
    <string name="events_fragment_empty_state_no_content_header">You have no events!</string>
    <string name="events_fragment_empty_state_no_content_subheader">Tap the button to create one!</string>
    <string name="events_fragment_empty_state_signed_out_subheader">Please sign in to view your events.</string>
    <string name="sign_in">Sign In</string>
    <string name="empty_state_event_invites_signed_out_subheader">Please sign in to view your invites.</string>
    <string name="empty_state_event_invites_no_invites_header">You have no invites!</string>
    <string name="empty_state_event_invites_no_invites_subheader">Your event invites will appear here</string>
    <string name="add_user_as_contact_val_prop">Log in to add %s to your contacts!</string>
    <string name="contacts_empty_state_signed_out_subheader">Sign in now to view your contacts</string>
    <string name="empty_state_signed_out_header">You\'re signed out!</string>
    <string name="profile_edit_title">Edit Your Profile</string>
    <string name="user_detail_contact_already_added">This user is already a contact!</string>
    <string name="user_not_in_db">User not found</string>
    <string name="contact_button_signed_out">Log in to add this contact!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="user_detail_error_header">There was a problem loading the user</string>
    <string name="edit_search_btn_text">Edit Search</string>
    <string name="auth_activity_text">Join the fun!</string>
    <string name="default_profile_tags_text">Add some tags!</string>
    <string name="default_profile_citystate_text">Add your city!</string>
    <string name="default_profile_url_text">Add your website!</string>
    <string name="default_profile_bio_text">Tell us about yourself!</string>
    <string name="website_user_detail">Website</string>
    <string name="tags_user_detail">Tags</string>
    <string name="username_user_detail">Username</string>
    <string name="profile_image_content_desc">profile image</string>
    <string name="users_toggle_option_search">Users</string>
    <string name="events_toggle_option_search">Events</string>
    <string name="city_state_user_detail">City, State</string>
    <string name="user_detail_bio">Bio</string>
    <string name="user_detail_email_btn_text">Email</string>
    <string name="user_detail_image_cont_desc">User Image</string>
    <string name="event_creation_profile_edit_hint">City, State</string>
    <string name="profile_tags_placeholder">Add some tags!</string>
    <string name="profile_bio_placeholder">Tell us about yourself!</string>
    <string name="profile_citystate_placeholder">Add your city!</string>
    <string name="profile_url_placeholder">Add your website!</string>
    <string name="profile_toolbar_placeholder">Your Profile</string>


</resources>
